@@ -21,6 +21,9 @@ software-center (2.1.14.3) UNRELEASED; urgency=low
     - minor logging improvements
   * merged lp:~mmcg069/software-center/pathbar-clip-fix that ensures
     proper clipping for the pathbar, many thanks!
+  * softwarecenter/view/channelpane.py:
+    - fix flicker in channelspane on db-reopen and add regression
+      test
 
   [ Gary Lasker ]
   * merge lp:~mmcg069/software-center/misbehaving-pathbar-fix, fixes
